--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -48,4 +48,4 @@ vscode:
     - nextflow.nextflow                    # Nextflow syntax highlighting
     # - oderwat.indent-rainbow # Highlight indentation level
     - streetsidesoftware.code-spell-checker # Spelling checker for source code
-    - ms-vscode.live-server
+    - ms-vscode.live-preview
